...G...... [ZBX-4635] added support for optional first parameter to vfs.dev.* on Solaris (dimir)
..F....... [ZBXNEXT-1153] added support for nested templates in import (Vedmak)
..F....... [ZBX-1357] updated Czech, French, German, Greek, Japanese, Polish, Russian, Spanish and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-4348] fixed graph values not displayed for regular user (Toms)
..F....... [ZBX-4698] fixed selected host group forgotten if "remember selected" is disabled (Toms)
..F....... [ZBX-4871] fixed templates listed when adding log items in history (Toms)
..F....... [ZBX-4862] fixed Error when trying to remove additional templates in the host mass update form (Toms)
....I..... [ZBX-3929] removed deprecated Switch module from gen_schema.pl and get_data.pl scripts (Sasha)
..F....... [ZBX-4738] improved the host interface select in the item mass update form (Pavels)
..F....... [ZBX-4738] fixed several checkboxes state not being saved after an unsuccessful item mass update (Pavels)
..F....... [ZBX-4865] fixed error bar in case of error with words longer than screen (Toms, Pavels)
........S. [ZBX-4840] improved slow SQL queries in processing of {ITEM.VALUE} and {ITEM.LOG.*} macros (Sasha)
..F....... [ZBX-4572] fixed incorrect value input in GUI configuration form raising critical error (Vedmak)
..F....... [ZBX-4841] fixed inability to select other but the first of the discovery checks for a discovery rule in popup.php (Toms)
..F....... [ZBX-4110] renamed 'Password' to 'Key passphrase' in action form (Vedmak)
..F....... [ZBX-4686] fixed the "Change" link not being accessible for graph type screen items in embedded screens (Pavels)
..F....... [ZBX-4836] fixed undefined variables in actionconf.php when trying to add maintenance status; fixed some random ordering for conditions (Toms)
..F....... [ZBX-4829] fixed incorrect redirect in 'insert trigger' popup in trigger expression builder (Vedmak)